admin panel added, pending reward decoupling, transaction links added

--- a/StakingDAPP/swapfolio8/index.html
+++ b/StakingDAPP/swapfolio8/index.html
@@ -73,7 +73,7 @@
 
                     <div class="col-md-6">
                         <div class="card card-height">
-                            <p class="right-card-header-paragraph">UNSTAKED SWFL BALANCE</p>
+                            <p class="right-card-header-paragraph">AVAILABLE SWFL BALANCE</p>
                             <hr>
                             <p class="main-number-small"><span id="SWFLBalance"></span> SWFL</p>
                             <div id="stake-main-section">
@@ -82,7 +82,8 @@
                                     <div class="col-lg-8 pr-lg-0">
                                         <input class="form-control" id="stack-value" type="number" min="1" placeholder="SWFL To Stake">
                                         <label class="text-danger" id="validation-error"></label>
-                                        <label class="text-success" id="stake-message"><i class="fa fa-check"></i> Staking request submitted, will be confirmed shortly</label>
+                                        <label class="text-success" id="stake-message"><i class="fa fa-check"></i> Staking request submitted, will be confirmed shortly <a id="stakeTransactionLink" href="" target="_blank">TransactionLink</a></label>
+                                        
                                     </div>
                                     <div class="col-lg-4 pl-lg-0">
                                         <button class="btn btn-stake" disabled id="btnStake">
@@ -130,7 +131,7 @@
                                     </button>
                                 </div>
                             </form>
-                            <div id="withdraw-message" class="text-success"><i class="fa fa-check"></i> Withdraw request submitted successfully, will be confirmed shortly</div>
+                            <div id="withdraw-message" class="text-success"><i class="fa fa-check"></i> Withdraw request submitted successfully, will be confirmed shortly <a id="withdrawTransactionLink" href="">TransactionLink</a></div>
                         </div>
                     </div>
 
