fixed remainder keeping logic in contract

--- a/StakingDAPP/swapfolio/admin.html
+++ b/StakingDAPP/swapfolio/admin.html
@@ -63,7 +63,7 @@
                                         <input class="form-control" id="funds-value" type="number" min="1" placeholder="SWFL TO DISTRIBUTE">
                                         <label class="text-danger" id="validation-error"></label>
                                         <label class="text-success" id="funds-message"><i class="fa fa-check"></i> Funds request submitted, will be confirmed shortly</label>
-                                        <label class="text-success"><a id="transactionLink" href="">TransactionLink</a></label>
+                                        <label class="text-success"><a id="transactionLink" href="">ViewTransaction</a></label>
                                     </div>
                                     <div class="col-lg-4 pl-lg-0">
                                         <button class="btn btn-stake" disabled id="btnFunds">
