--- a/StakingDAPP/swapfolio/index.html
+++ b/StakingDAPP/swapfolio/index.html
@@ -82,7 +82,7 @@
                                     <div class="col-lg-8 pr-lg-0">
                                         <input class="form-control" id="stack-value" type="number" min="1" placeholder="SWFL To Stake">
                                         <label class="text-danger" id="validation-error"></label>
-                                        <label class="text-success" id="stake-message"><i class="fa fa-check"></i> Staking request submitted, will be confirmed shortly <a id="stakeTransactionLink" href="" target="_blank">TransactionLink</a></label>
+                                        <label class="text-success" id="stake-message"><i class="fa fa-check"></i> Staking request submitted, will be confirmed shortly <a id="stakeTransactionLink" href="" target="_blank">ViewTransaction</a></label>
                                         
                                     </div>
                                     <div class="col-lg-4 pl-lg-0">
@@ -131,7 +131,7 @@
                                     </button>
                                 </div>
                             </form>
-                            <div id="withdraw-message" class="text-success"><i class="fa fa-check"></i> Withdraw request submitted successfully, will be confirmed shortly <a id="withdrawTransactionLink" href="">TransactionLink</a></div>
+                            <div id="withdraw-message" class="text-success"><i class="fa fa-check"></i> Withdraw request submitted successfully, will be confirmed shortly <a id="withdrawTransactionLink" href="">ViewTransaction</a></div>
                         </div>
                     </div>
 
